--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   /* Light Theme Colors */
   --bg: #ffffff;
   --bg-color: #E2E8F0;
-  --text: #1f1f1f;
+  --text: rgba(13, 42, 75, 0.945);
   --text-color: #111111;
   --accent: #4b7bec;
   --secondary: #f50057;
@@ -58,7 +58,7 @@
   /* Dark Theme Colors */
   --bg: #0d1117;
   --bg-color: #0F172A;
-  --text: #e0e0e0;
+  --text: rgba(194, 213, 234, 0.945);
   --text-color: #f1f1f1;
   --accent: #4b7bec;
   --secondary: #f50057;
@@ -173,7 +173,7 @@ box-shadow: 0 6px 10px var(--text-color);
         }
         
         .nav-links a:hover {
-            color: var(--primary);
+            color: var(--accent);
         }
         
         .nav-links a::after {
@@ -308,6 +308,8 @@ box-shadow: 0 6px 10px var(--text-color);
         }
         
         .btn-outline {
+          font-size: 1.2rem;
+          /* font-weight: 400px; */
             background-color: transparent;
             border: 2px solid var(--primary);
             color: var(--primary);
@@ -399,7 +401,8 @@ box-shadow: 0 6px 10px var(--text-color);
     width: 300px;
   animation: floatImg 4s ease-in-out infinite;
   border-radius: 20px;
-  border: 8px solid #fff;
+  height: 400px;
+  /* border: 8px solid var(--text-color); */
   box-shadow: 0 10px 30px rgba(79, 155, 241, 0.945);
   /* transform: rotate(-3deg);
   transition: transform 0.3s ease; */
@@ -418,8 +421,9 @@ box-shadow: 0 6px 10px var(--text-color);
         }
         
         .about-text h3 {
+          margin-top: -5px;
             font-size: 1.8rem;
-            margin-bottom: 20px;
+            margin-bottom: 13px;
             color: var(--text-color);
         }
         
@@ -450,6 +454,28 @@ box-shadow: 0 6px 10px var(--text-color);
             color: white;
             transform: translateY(-3px);
         }
+
+        .about-text p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  line-height: 1.6;
+  color: var(--text);
+}
+
+.btn-primary {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 10px 20px;
+  background-color: var(--primary);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 30px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #6c63ff;
+}
         
         /* Projects Section */
         .projects {
